python-apt (0.7.91) UNRELEASED; urgency=low

  * Rename all methods,functions,attributes to conform to PEP 8 (Closes: #481061)
  * Where possible, derive apt.package.Record from collections.Mapping.
  * ActionGroups can be used as a context manager for the 'with' statement.

 -- Julian Andres Klode <jak@debian.org>  Fri, 17 Apr 2009 17:48:27 +0200

python-apt (0.7.90) experimental; urgency=low

  * Introduce support for Python 3 (Closes: #523645)

  * Support the 'in' operator (e.g. "k in d") in Configuration{,Ptr,Sub}
    objects (e.g. apt_pkg.Config) and in TagSections (apt_pkg.ParseSection())
  * Replace support for file objects with a more generic support for any object
    providing a fileno() method and for file descriptors (integers).
  * Add support for the Breaks fields
  * Only create Package objects when they are requested, do not keep them in
    a dict. Saves 10MB for 25,000 packages on my machine.
  * apt/package.py: Allow to set the candidate of a package (Closes: #523997)
    - Support assignments to the 'candidate' property of Package objects.
    - Initial patch by Sebastian Heinlein

 -- Julian Andres Klode <jak@debian.org>  Wed, 15 Apr 2009 13:47:42 +0200

python-apt (0.7.10.3) unstable; urgency=low

  * apt/package.py: Handle cases where no candidate is available, by returning
    None in the candidate property. (Closes: #523801)

 -- Julian Andres Klode <jak@debian.org>  Sun, 12 Apr 2009 19:50:26 +0200

python-apt (0.7.10.2) unstable; urgency=low

  * apt/package.py: Handle cases where no candidate is available and
    one of the deprecated properties (e.g. candidateVersion) is
    requested. (Closes: #523801)
  * setup.py, debian/rules: Support version in setup.py again by getting
    the value from the variable DEBVER (defined in debian/rules), falling
    back to None.

 -- Julian Andres Klode <jak@debian.org>  Sun, 12 Apr 2009 19:00:07 +0200

python-apt (0.7.10.1) unstable; urgency=low
